Add projects dynamically from JS object

--- a/index.html
+++ b/index.html
@@ -24,8 +24,9 @@
       href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css"
     />
     <script src="js/index.js" defer></script>
+    <script src="js/cardAndModal.js" defer></script>
   </head>
-  <body tabindex="0" class="container">
+  <body tabindex="0" class="container" onload='load()'>
     <section class="popup expand" id="popup">
       <div class="popupWrapper">
         <h1 class="popupTitle" id="popupTitle">Keeping track</h1>
@@ -140,108 +141,6 @@
         <button class="mybtn recentbtn" id="recentbutton" type="button">See Project</button>
       </div>
       <div class="workCards">
-        <div class="workCard" tabindex="0">
-          <div class="workCardContent">
-            <h3 class="recentWorkTitle wc">
-              Profesional Art <br />Printing Data
-            </h3>
-            <p class="recentWorkDesc wc">
-              A daily selection of privately personalized reads; no accounts or
-              sign-ups required. has been the industry's standard
-            </p>
-            <ul class="usedTechs wc">
-              <li class="tech twc">HTML</li>
-              <li class="tech twc">Bootstrap</li>
-              <li class="tech twc">Ruby</li>
-            </ul>
-          </div>
-          <button class="mybtn spwc projectbtn" type="button">See Project</button>
-        </div>
-        <div class="workCard" tabindex="0">
-          <div class="workCardContent">
-            <h3 class="recentWorkTitle wc">
-              Profesional Art <br />Printing Data
-            </h3>
-            <p class="recentWorkDesc wc">
-              A daily selection of privately personalized reads; no accounts or
-              sign-ups required. has been the industry's standard
-            </p>
-            <ul class="usedTechs wc">
-              <li class="tech twc">HTML</li>
-              <li class="tech twc">Bootstrap</li>
-              <li class="tech twc">Ruby</li>
-            </ul>
-          </div>
-          <button class="mybtn spwc projectbtn" type="button">See Project</button>
-        </div>
-        <div class="workCard" tabindex="0">
-          <div class="workCardContent">
-            <h3 class="recentWorkTitle wc">
-              Profesional Art <br />Printing Data
-            </h3>
-            <p class="recentWorkDesc wc">
-              A daily selection of privately personalized reads; no accounts or
-              sign-ups required. has been the industry's standard
-            </p>
-            <ul class="usedTechs wc">
-              <li class="tech twc">HTML</li>
-              <li class="tech twc">Bootstrap</li>
-              <li class="tech twc">Ruby</li>
-            </ul>
-          </div>
-          <button class="mybtn spwc projectbtn" type="button">See Project</button>
-        </div>
-        <div class="workCard" tabindex="0">
-          <div class="workCardContent">
-            <h3 class="recentWorkTitle wc">
-              Profesional Art <br />Printing Data
-            </h3>
-            <p class="recentWorkDesc wc">
-              A daily selection of privately personalized reads; no accounts or
-              sign-ups required. has been the industry's standard
-            </p>
-            <ul class="usedTechs wc">
-              <li class="tech twc">HTML</li>
-              <li class="tech twc">Bootstrap</li>
-              <li class="tech twc">Ruby</li>
-            </ul>
-          </div>
-          <button class="mybtn spwc projectbtn" type="button">See Project</button>
-        </div>
-        <div class="workCard" tabindex="0">
-          <div class="workCardContent">
-            <h3 class="recentWorkTitle wc">
-              Profesional Art <br />Printing Data
-            </h3>
-            <p class="recentWorkDesc wc">
-              A daily selection of privately personalized reads; no accounts or
-              sign-ups required. has been the industry's standard
-            </p>
-            <ul class="usedTechs wc">
-              <li class="tech twc">HTML</li>
-              <li class="tech twc">Bootstrap</li>
-              <li class="tech twc">Ruby</li>
-            </ul>
-          </div>
-          <button class="mybtn spwc projectbtn" type="button">See Project</button>
-        </div>
-        <div class="workCard" tabindex="0">
-          <div class="workCardContent">
-            <h3 class="recentWorkTitle wc">
-              Profesional Art <br />Printing Data
-            </h3>
-            <p class="recentWorkDesc wc">
-              A daily selection of privately personalized reads; no accounts or
-              sign-ups required. has been the industry's standard
-            </p>
-            <ul class="usedTechs wc">
-              <li class="tech twc">HTML</li>
-              <li class="tech twc">Bootstrap</li>
-              <li class="tech twc">Ruby</li>
-            </ul>
-          </div>
-          <button class="mybtn spwc projectbtn" type="button">See Project</button>
-        </div>
       </div>
     </section>
     <section class="aboutme" id="about">
