--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
     <script src="js/index.js" defer></script>
     <script src="js/cardAndModal.js" defer></script>
   </head>
-  <body tabindex="0" class="container" onload='load()'>
+  <body tabindex="0" class="container">
     <section class="popup expand" id="popup">
       <div class="popupWrapper">
         <h1 class="popupTitle" id="popupTitle">Keeping track</h1>
