Change to add a error message.

--- a/index.html
+++ b/index.html
@@ -222,6 +222,8 @@
               type="email"
               name="mail"
               placeholder="Email address"
+              pattern="mailRegex"
+              id="email"
             />
           </li>
           <li>
@@ -236,7 +238,7 @@
             ></textarea>
           </li>
         </ul>
-        <button class="mybtn getInTouchBtn" type="submit">Get in touch</button>
+        <button class="mybtn getInTouchBtn" id="subBtn" type="submit">Get in touch</button>
       </form>
     </section>
     <footer class="myfooter">
